# vibeFrame

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vibeframe/: __main__.py  bench.py  cache.py  config.py  db.py  library.py  progress.py  scheduler.py  thumb_warmer.py  timing.py  watcher.py
src/vibeframe/display/: __init__.py  base.py  factory.py  inky_driver.py  mock_driver.py
src/vibeframe/processor/: __init__.py  crop.py  dither.py  faces.py  palette.py  pipeline.py  tonemap.py
src/vibeframe/web/: app.py  deps.py
src/vibeframe/web/routes/: favorites.py  images.py  metrics.py  settings.py  system.py
src/vibeframe/web/static/: app.css  app.js
src/vibeframe/web/static/tokens/: colors.css  fonts.css  spacing.css  typography.css
src/vibeframe/web/templates/: _macros.html  _metrics_body.html  _now_showing.html  _status_chip.html  _upload_result.html  base.html  home.html  images.html  metrics.html  settings.html
tests/: conftest.py  test_cache.py  test_config.py  test_crop.py  test_library.py  test_processor.py  test_scheduler.py  test_timing.py  test_web.py
