[project]
name = "vibeframe"
version = "0.1.0"
description = "NFS-backed digital photo frame for the Inky Impression 7.3\" Spectra 6 e-paper display."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Seth Stuart" }]

dependencies = [
    "Pillow>=10.3",
    "pillow-heif>=0.16",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "watchdog>=4.0",
    "python-dateutil>=2.9",
    "tzdata>=2024.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
rpi = [
    "inky[rpi]>=1.5",
    "gpiod>=2.2",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]

[project.scripts]
vibeframe = "vibeframe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibeframe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF046"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
