[project]
name = "vibeframe"
version = "0.1.0"
description = "NFS-backed digital photo frame for the Inky Impression 7.3\" Spectra 6 e-paper display."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Seth Stuart" }]

dependencies = [
    "Pillow>=10.3",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "watchdog>=4.0",
    "tzdata>=2024.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
rpi = [
    "inky[rpi]>=1.5",
    "gpiod>=2.2",
]
# Pillow-heif lets you display .HEIC / .HEIF photos (iPhone-default format).
# Keep it optional — it's a hefty native build and most photo libraries are
# already JPEG/PNG.
heif = [
    "pillow-heif>=0.16",
]
# numba JIT-compiles the Floyd-Steinberg / Atkinson inner loops.
# Without it the dither module falls back to a pure-numpy + Python loop
# implementation; on the Pi 4 that's ~20s/image for FS. With numba it's
# ~300ms. Pulls in llvmlite (~80 MB) so it's opt-in.
dither = [
    "numba>=0.59",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]
profile = [
    "py-spy>=0.3",
]

[project.scripts]
vibeframe = "vibeframe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibeframe"]

[tool.hatch.build.targets.wheel.force-include]
"src/vibeframe/processor/face_yunet.onnx" = "vibeframe/processor/face_yunet.onnx"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF046"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
